--- a/Server-Side/package.json
+++ b/Server-Side/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "TND Collab Platform BackEnd",
   "main": "App.js",
-  "scripts": {
+  "scripts": 
+  {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon App.js"
   },
